--- a/style.css
+++ b/style.css
@@ -8,3 +8,42 @@
     color: #fff;
     background-color: #000;
 }
+
+/* Header Styling */
+header{
+    padding: 0 20px;
+}
+
+.head{
+    /* border: 1px solid white; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav ul{
+    list-style: none;
+    opacity: 0;
+    position: absolute;
+    display: flex;
+}
+
+.icons{
+    position: absolute;
+    opacity: 0;
+}
+
+#techinnover{
+    width: 173px;
+    height: 64.88px;
+}
+
+.hamburger{
+    /* border: 1px solid white; */
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.hamburger i{
+    margin-right: 5px;
+}
