--- a/style.css
+++ b/style.css
@@ -5,20 +5,30 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Nunito", sans-serif;
+    
+}
+
+body{
     color: #fff;
     background-color: #000;
 }
 
 /* Header Styling */
-header{
-    padding: 0 20px;
-}
+/* header{
+} */
 
 .head{
+    width: 100%;
     /* border: 1px solid white; */
+    background-color: #000;
+    padding: 0 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    z-index: 20;
+    top: 0;
+    left: 0;
 }
 
 nav ul{
@@ -47,3 +57,62 @@ nav ul{
 .hamburger i{
     margin-right: 5px;
 }
+
+/* Section One Styling */
+.sec1{
+    margin-top: 140px;
+}
+
+.sec1 h2{
+    font-size: 38px;
+    font-weight: 400;
+    padding: 30px 30px 0;
+}
+
+.banner{
+    margin-top: 30px;
+    /* border: 1px solid white; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   
+}
+
+.banner img{
+   width: 60%;
+}
+
+#banner_text{
+    /* border: 1px solid red; */
+    width: 100%;
+    /* z-index: 2; */
+    background-color: #FFF;
+    padding: 60px 30px;
+    color: #000;
+    /* text-align: center; */
+}
+
+#banner_text h3{
+    font-size: 28px;
+    font-weight:500;
+}
+
+.span_text{
+    color: #A9AEB3;
+}
+
+/* Section Two Styling */
+.sec2{
+    margin-top: 70px;
+}
+
+.sec2_text{
+    padding: 30px;
+}
+
+.sec2_text h3{
+    font-size: 26px;
+    font-weight: 400;
+    width: 414px;
+}
+
