--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ footer{
 
 .banner{
     padding: 30px;
-    margin: 60px 0px 100px;
+    margin: 60px 0px 150px;
     display: flex;
     flex-direction: row;
 }
@@ -441,5 +441,35 @@ footer{
     padding: 48.6px;
 }
 
+/* Section Two Styling */
+.sec2{
+    margin: 60px 0px;
+    padding: 0px 30px;
+}
+
+.sec2_text{
+    width: 50%;
+    float: left;
+}
+
+.sec2_text p{
+    margin-top: 60px;
+    line-height: 25px;
+}
+
+.portfolio{
+    width: 50%;
+    /* display: flex; */
+    flex-direction: row;
+}
+
+.projects p, .experts p{
+    text-align: center;
+    margin-top: 10px;
+}
+
+.fa-briefcase, .fa-laptop-code{
+    margin: 10px 0px 30px;
+}
 
 }
